--- a/ros_gz_example_bringup/config/forklift_bridge_config.yaml
+++ b/ros_gz_example_bringup/config/forklift_bridge_config.yaml
@@ -25,6 +25,13 @@
   gz_type_name: "gz.msgs.Model"
   direction: GZ_TO_ROS
 
+# Topic subscribed to by Lift joint plugin
+- ros_topic_name: "/lift"
+  gz_topic_name: "/lift"
+  ros_type_name: "std_msgs/msg/Float64"
+  gz_type_name: "gz.msgs.Double"
+  direction: ROS_TO_GZ
+
 # Topic subscribed to by DiffDrive plugin
 - ros_topic_name: "/demo/cmd_vel"
   gz_topic_name: "/demo/cmd_vel"
