--- a/ros_gz_example_bringup/config/lift_controller.yaml
+++ b/ros_gz_example_bringup/config/lift_controller.yaml
@@ -1,13 +1,17 @@
 controller_manager:
-  ros_parameters:
-    update_rate: 1000 #In Hz
+  ros__parameters:
+    update_rate: 1000  # Hz
 
-lift_joints_controller:
-  type: position_controllers/JointGroupPositionController
-  joint: 
-    - liftlconnector_joint
-    - liftrconnector_joint
-  pid:
-    p: 100.0
-    i: 0.01
-    d: 10.0
+    joint_state_broadcaster:
+      type: joint_state_broadcaster/JointStateBroadcaster
+
+joint_trajectory_controller:
+  ros__parameters:
+    type: joint_trajectory_controller/JointTrajectoryController
+    joints:
+      - liftlconnector_joint
+    command_interfaces:
+      - position
+    state_interfaces:
+      - position
+      - velocity
